Added Latest code

--- a/employee/package.json
+++ b/employee/package.json
@@ -10,16 +10,27 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^10.0.0",
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^16.0.1",
+    "@ngrx/store": "^16.0.1",
     "bootstrap": "^5.3.0",
+    "firebase": "^9.22.2",
+    "ng-redux": "^4.4.5",
+    "ng2-redux": "^5.1.2",
+    "ngrx-store-logger": "^0.2.4",
     "ngx-pagination": "^6.0.3",
+    "redux": "^4.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
